# codingame-fall2024

./: .gitignore  CMakeLists.txt  vcpkg.json
scripts/: combine.bash
scripts/ports/strong-types/: portfile.cmake  vcpkg.json
src/: actions.hpp  common.hpp  constants.hpp  game.hpp  main.cpp  math.cpp  math.hpp  types.hpp
